name:                iohk
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/madjar/iohk#readme
license:             BSD3
license-file:        LICENSE
author:              Georges Dubus
maintainer:          georges.dubus@compiletoi.net
copyright:           2015 Georges Dubus
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable iohk
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network-transport-tcp
                     , distributed-process
                     , network-transport
                     , bytestring >= 0.10
                     , mtl >= 2.2
                     , optparse-applicative >= 0.12
                     , time >= 1.5
                     , binary >= 0.7
                     , random >= 1.1
